# realistic-spell-fps

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVCONTAINER_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  UNIFICATION_SUMMARY.md  config.toml
.devcontainer/: base-builder-linux.Dockerfile  base-builder-windows.Dockerfile  base-linux.Dockerfile  base-windows.Dockerfile  build-rust-msvc.bat  builder-linux.Dockerfile  client-linux.Dockerfile  client-windows.Dockerfile  client.Dockerfile  dev-linux.Dockerfile  devcontainer.json  server-linux.Dockerfile  server-windows.Dockerfile  server.Dockerfile
.devcontainer/deprecated/: builder-linux.Dockerfile  client-linux.Dockerfile  client-windows.Dockerfile  client.Dockerfile  server-linux.Dockerfile  server.Dockerfile
.github/workflows/: build-base-images.yml  build-linux.yml  build-macos.yml  build-pipeline.yml  build-windows.yml  ci.yml  docker-multiplatform.yml  docker.yml
assets/: .placeholder  README.md
assets/images/: README.md
assets/materials/: README.md
assets/models/: README.md
assets/shaders/: README.md
assets/sounds/: README.md
crates/client/: Cargo.toml
crates/client/src/: audio.rs  gameplay.rs  input.rs  lib.rs  main.rs  network.rs  physics.rs  rendering.rs  spell_ui.rs
crates/client/src/assets/: mod.rs
crates/client/src/audio/: mod.rs
crates/client/src/gameplay/: mod.rs
crates/client/src/input/: mod.rs
crates/client/src/net/: mod.rs
crates/client/src/physics/: mod.rs
crates/client/src/renderer_vk/: mod.rs
crates/client/src/rendering/: mod.rs
crates/client/src/ui/: mod.rs
crates/client/tests/: client_test.rs
crates/editor/: Cargo.toml
crates/editor/src/: level.rs  main.rs  ui.rs
crates/editor/src/scene/: mod.rs
crates/editor/src/tools/: mod.rs
crates/editor/src/ui/: mod.rs
crates/editor/tests/: editor_test.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  ecs.rs  lib.rs  math.rs  network.rs  physics.rs
crates/engine/src/ecs/: mod.rs
crates/engine/src/io/: mod.rs
crates/engine/src/math/: mod.rs
crates/engine/src/net_proto/: mod.rs
crates/engine/src/physics_core/: mod.rs
crates/engine/tests/: engine_test.rs
crates/server/: Cargo.toml
crates/server/src/: collision.rs  lib.rs  main.rs  network.rs  persistence.rs  physics.rs  state.rs
crates/server/src/game_logic/: mod.rs
crates/server/src/net/: mod.rs
crates/server/src/persistence/: mod.rs
crates/server/src/physics/: mod.rs
crates/server/src/player_data/: mod.rs
crates/server/tests/: server_test.rs
docs/: ARCHITECTURE.md  AUDIO_DESIGN.md  CI_CD.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER_BUILD.md  PHYSICS_ARCHITECTURE.md  README.md  STRUCTURE.md  WORKSPACE.md  design.md  networking.md
scripts/dev-setup/: build-devcontainer.ps1  build-devcontainer.sh  setup-gpg-signing-for-git.ps1  setup-gpg-signing-for-git.sh
scripts/project/: windows.cmd
scripts/project-build/: linux.sh  windows.cmd
src/: main.rs
tests/: README.md  workspace_test.rs
tests/harness/: mod.rs
tests/integration/: deterministic_physics.rs  e2e_server_client.rs
tools/: README.md
