[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/server",
    "crates/engine",
    "crates/editor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AdamBajger"]
license = "MIT"
repository = "https://github.com/AdamBajger/realistic-spell-fps"

[workspace.dependencies]
# ECS
bevy_ecs = "0.12"

# Math and physics
glam = { version = "0.25", features = ["serde"] }
rapier3d = "0.18"

# Networking
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
