[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Engine
engine = { path = "../engine" }

# ECS
bevy_ecs = { workspace = true }

# Math
glam = { workspace = true }

# Physics
rapier3d = { workspace = true }

# Networking
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# Graphics (Vulkan/SPIR-V)
ash = "0.37"
gpu-allocator = "0.25"
winit = "0.29"

# Audio
rodio = "0.17"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
vulkan = []
