[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Engine
engine = { path = "../engine" }

# Server (optional, for LAN hosting)
server = { path = "../server", optional = true }

# ECS
bevy_ecs = { workspace = true }

# Math
glam = { workspace = true }

# Physics (shared with engine)
rapier3d = { workspace = true }

# Networking
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# Graphics (Vulkan/SPIR-V)
ash = "0.37"
gpu-allocator = "0.25"
winit = "0.29"

# Audio (optional)
rodio = { version = "0.17", optional = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["lan-host", "audio"]
# Enable LAN hosting capability (embeds server)
lan-host = ["server"]
# Enable audio support
audio = ["rodio"]
vulkan = []


