[package]
name = "editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Engine
engine = { path = "../engine" }

# ECS
bevy_ecs = { workspace = true }

# Math
glam = { workspace = true }

# UI (egui for immediate mode UI)
eframe = "0.25"
egui = "0.25"

# File I/O
serde = { workspace = true }
serde_json = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
