[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Engine
engine = { path = "../engine" }

# ECS
bevy_ecs = { workspace = true }

# Math
glam = { workspace = true }

# Deterministic Physics
rapier3d = { workspace = true }

# Networking
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# Persistence
sled = "0.34"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
